--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,10 +10,10 @@ jobs:
       - python/install-deps
       - python/save-cache
       - run:
-          command: python ./tests/mocked_unit_test.py 
+          command: python ./tests/mocked_tests.py 
           name: Mocked Test
       - run:
-          command: python ./tests/unmocked_unit_tests.py 
+          command: python ./tests/unmocked_tests.py 
           name: Unmocked Test
 workflows:
   main:
